--- a/Assets/stylecoordenador.css
+++ b/Assets/stylecoordenador.css
@@ -1,4 +1,4 @@
-/* Estilo Geral */
+* Estilo Geral */
 :root {
   --primary-color: #a80606;
   --primary-hover: #8B0000;
@@ -359,18 +359,15 @@ body {
 .form-group input,
 .form-group select,
 .form-group textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
-  font-size: 14px;
-}
-
-.form-group input:focus,
-.form-group select:focus,
-.form-group textarea:focus {
-  outline: none;
-  border-color: var(--primary-color);
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    transition: border-color 0.3s ease;
+    box-sizing: border-box;
 }
 
 /* Tabelas */
@@ -607,7 +604,7 @@ body {
 .form-group input:focus {
   border-color: #9c0000;
   outline: none;
-  box-shadow: 0 0 0 2px rgba(156, 0, 0, 0.1);
+  box-shadow: 0 0 0 2px rgba(156, 0, 0, 0.08);
 }
 
 .btn-action.approve {
@@ -876,6 +873,7 @@ body {
   cursor: pointer;
   font-weight: bold;
   transition: background-color 0.3s;
+  
 }
 
 .btn-primary {
@@ -1009,4 +1007,60 @@ select {
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
     transition: border-color 0.3s ease;
+}
+
+#editalForm .btn-primary {
+    display: block;
+    margin: 0 auto;
+}
+
+#editalForm input,
+#editalForm select,
+#editalForm textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    transition: border-color 0.3s ease;
+    box-sizing: border-box;
+}
+
+#editalForm input:focus,
+#editalForm select:focus,
+#editalForm textarea:focus {
+    border-color: #9c0000;
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(156, 0, 0, 0.08);
+}
+
+/* Botão Excluir Personalizado */
+.btn-excluir {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s;
+  
+}
+
+.btn-excluir {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+.btn-excluir:hover {
+  background-color: var(--primary-hover);
+}
+
+.btn-excluir {
+  background-color: #9c0000;
+  color: white;
+}
+
+.btn-excluir:hover {
+  background-color: #5c0303;
 }
